<?xml version="1.0"?>
<package format="3">
  <name>maze_robot_driver</name>
  <version>0.0.0</version>
  <description>Robot driver package for maze robot</description>

  <maintainer email="syeong8663@gmail.com">Seo Yeong</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>