<?xml version="1.0"?>
<package format="3">
  <name>maze_robot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation environment for maze robot</description>
  <maintainer email="syeong8663@gmail.com">Seo Yeong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>